# Study-Plan-APP-OSS

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPER_DOC.md  LICENSE  MODULE_RECONFIG_PLAN.md  MODULE_WORKFLOW_INVESTIGATION.md  PERFORMANCE_OPTIMIZATION_SLICE.md  PROMPT_QUALITY_SLICE.md  QUICK_START.md  RAG_AND_MODULE_IMPROVEMENTS.md  README.md  UI_BEST_PRACTICES.md  UI_MIGRATION_GUIDE.md  UI_REFACTORING_SUMMARY.md  UI_SYSTEM_README.md  USER_GUIDE.md  acca_f7_500_questions.json  ai_import_project_appraisal_risk_hard.json  ai_questions_fm_syllabus_priority_top100.json  ai_questions_fm_syllabus_priority_top50.json  conftest.py  deploy.py  hj.json  module_schema.json  pyproject.toml  pytest.ini  studyplan_ai_tutor.py  studyplan_app.py  studyplan_app_kpi_routing.py  studyplan_app_path_utils.py  studyplan_app_runtime_helpers.py  studyplan_engine.py  studyplan_file_safety.py  studyplan_theme.py  studyplan_ui_runtime.py  studyplan_ui_state_store.py
docs/: AI_OUTCOME_BUILD_AND_LINK_PIPELINE.md  AI_OUTCOME_LINKING_AUTOMATION.md  BUG_HUNT_50_ITERATIONS.md  BUG_HUNT_SYLLABUS_AND_UI_BUTTONS.md  CORE_FEATURE_IMPROVEMENT_OUTCOME_LINKING.md  DEVELOPER_DOC.md  DYNAMIC_PLAN_COMPUTE_PLAN.md  EXAM_WORKSPACE_IDEAS.md  FEATURES.md  FR_STATEMENT_PREPARATION_PLAN.md  GUI_MONOLITH_PERFORMANCE_PLAN.md  GUI_WORKFLOW_HARDENING_PLAN.md  HARDENING.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_BACKLOG_100.md  LLM_IMPLEMENTATION_ROADMAP.md  LLM_OPERATIONS.md  LLM_TELEMETRY_SCHEMA.md  MONETIZATION_STRATEGY.md  NEXT_3_IMPLEMENTATION_TASKS.md  QUICK_START.md  RAG_AND_MODULE_IMPROVEMENTS.md  RAG_RECONFIG_STREAMLINING_PLAN.md  RAG_VS_CONFIG_SOURCE_OF_TRUTH.md  SYLLABUS_INGEST_AND_STABILITY_PLAN.md  SYLLABUS_RAG_DERIVED_CHAPTERS.md  THREE_ES_PROMPT_IMPLEMENTATION.md
modules/: acca_f6.json  acca_f7.json  acca_f7_1000_questions.json  acca_f7_kickstart_questions.json  acca_f8.json  acca_f8_chapters.json
scripts/: README_module_chapters.md  build_f7_questions_import.py  clean.sh  export_flashcards.py  import_f7_syllabus_outcomes.py  llm_telemetry_aggregate.py  remind_review.py  studyplan-remind.service  studyplan-remind.timer  studyplan-update.sh  studyupdate.fish  update_module_chapters.py
studyplan/: IMPROVEMENTS.md  PHASE1_COMPLETION_SUMMARY.md  __init__.py  coach_fsm.py  cognitive_state.py  confidence_tracking.py  config.py  contracts.py  dialog_ux.py  error_analysis.py  fsrs.py  hint_system.py  json_safety.py  learning_Science.py  lifecycle.py  logging_config.py  mastery_kernel.py  module_chapters.py  outcome_linking.py  performance_integration.py  performance_monitor.py  persistence_layer.py  phase1_demo.py  platform_compat.py  practice_loop_controller.py  practice_loop_fsm.py  question_generator.py  question_quality.py  schema_migration.py  secure_importer.py  services.py  state_locking.py  statement_format_checklists.py  syllabus_f7.py  syllabus_fr.py  syllabus_outcomes.py  tutor_memory.py  tutor_workspace_controller.py  ui_builder.py  ui_mixin.py  (+3 more)
tests/: test_action_registry.py  test_ai_recovery.py  test_assemble_tutor_prompt_dedup.py  test_cognitive_runtime.py  test_confidence_tracking.py  test_context_policy.py  test_dashboard_cards.py  test_engine_improvements.py  test_error_analysis.py  test_export_question_stats.py  test_fsrs.py  test_golden_tutor_prompts.py  test_hint_system.py  test_infrastructure_modules.py  test_learning_science.py  test_markdown_renderer.py  test_mastery_kernel.py  test_model_routing.py  test_platform_compat.py  test_practice_loop_controller.py  test_quiz_gap_routing.py  test_rag_and_reconfig_safety.py  test_rag_concept_graph.py  test_smoke_kpi.py  test_soak_kpi.py  test_streak_reset.py  test_studyplan_app_ollama.py  test_studyplan_app_paths.py  test_studyplan_engine.py  test_studyplan_file_safety.py  test_studyplan_ui_runtime.py  test_studyplan_ui_state_store.py  test_telemetry_slo.py  test_train_recall_model_sklearn.py  test_tutor_phase1_services.py  test_tutor_prompt_layers.py  test_ui_builder.py
tools/: analyze_tutor_quality_trends.py  compare_tutor_quality_reports.py  gtk4_lint.py  perf_report.json  run_perf_benchmark.py  run_tutor_quality_benchmark.py  run_tutor_quality_pipeline.py  run_tutor_quality_shadow_compare.py  train_difficulty_model_sklearn.py  train_interval_model_sklearn.py  train_recall_model.py  train_recall_model_sklearn.py  validate_tutor_quality_reports.py
(+146 files in other folders)
