[tool.poetry]
name = "studyplan"
version = "0.1.0"
description = "ACCA Study Plan App - AI-powered adaptive tutoring runtime"
authors = ["ACCA OSS Team"]

[tool.poetry.dependencies]
python = "^3.11"
PyGObject = { version = ">=3.42", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.3"
pyright = "^1.1"

[tool.poetry.extras]
# Install with: pip install -e ".[test-full]" or poetry install -E test-full
# Requires system GTK4/GObject (e.g. Ubuntu: apt install python3-gi gir1.2-gtk-4.0)
test-full = ["PyGObject"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["__pycache__", ".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "N", "C", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# GTK4 requires gi.require_version() before other gi.repository imports, so
# stdlib imports end up after the gi import → E402 is structural, not a bug.
# F401 unused-import and C-family complexity violations are pre-existing.
"studyplan_app.py" = ["E402", "F401", "C901", "C416", "B009", "B010", "B007", "E731", "N806", "N814", "F841", "C401", "F541", "C420", "B905"]
"tests/test_studyplan_app_ollama.py" = ["C901", "C416", "F841"]
"studyplan/testing/*.py" = ["C901", "C416", "F841"]

[tool.pyright]
include = ["studyplan", "studyplan_app.py", "studyplan_engine.py"]
exclude = [
    "**/.git",
    "**/.hg",
    "**/.svn",
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/node_modules",
    "studyplan/ui",
    "studyplan/testing",
    "studyplan/ui_builder.py",
    "studyplan/ui_mixin.py",
    "tests",
]
typeCheckingMode = "basic"
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests", "studyplan/testing"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
